Link BD and show data - 4_Hack_0.3ver

--- a/Hack_4/Pages/Auto.xaml
+++ b/Hack_4/Pages/Auto.xaml
@@ -9,6 +9,10 @@
       Title="Auto">
 
     <Grid>
-        
+        <StackPanel HorizontalAlignment="Center"
+                    VerticalAlignment="Center">
+            <Button x:Name="nextBtn" Content="Далее" 
+                    FontSize="25" Click="nextBtn_Click"/>
+        </StackPanel>
     </Grid>
 </Page>
