--- a/Hack_4/Pages/MainPage.xaml
+++ b/Hack_4/Pages/MainPage.xaml
@@ -48,7 +48,7 @@
                 </DataGrid.Columns>
             </DataGrid>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button x:Name="nextBtn" Content="Далее" FontSize="20"/>
+                <Button x:Name="nextBtn" Content="Далее" FontSize="20" Click="nextBtn_Click"/>
             </StackPanel>
         </StackPanel>
     </Grid>
